--- a/css/main.css
+++ b/css/main.css
@@ -54,3 +54,16 @@ div.container {
     display: inline-block;
     border-radius: 10px;
 }
+
+html{height:100%;}
+body{min-height:100%;margin:0;padding:0;position:relative;}
+
+#main {
+	padding-bottom:100px;
+}
+#footer {
+	position:absolute;
+	bottom:0;
+	width:100%;
+	height:100px;
+}
